# esp32-multitool

./: .gitignore  LICENSE  Makefile  README.md  sdkconfig  system.cfg.default
Apple/Buttons/: ContentView.swift  Info.plist
Apple/ButtonsTests/: ButtonsTests.swift
Apple/ButtonsUITests/: ButtonsUITests.swift
Buttons/: ButtonsApp.swift  ContentView.swift
Buttons.xcodeproj/: project.pbxproj
ButtonsUITests/: ButtonsUITestsLaunchTests.swift
common/: cfg_parse.c  rf433_main.c  rf433_task.c  spifs_main.c
esptunnel/: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults
esptunnel/esp_filesystem/buttons/: b.off  b.on  c.on  d.off  d.on  ob.off
esptunnel/esp_filesystem/public/: buttons.json  index.html
esptunnel/main/: CMakeLists.txt  Kconfig.projbuild  checksum.c  checksum.h  console.c  console.h  console_main.c  hardware.h  hw_config.h  main.cpp  serio.h  serio_task.c  spio.c  spio.cpp  sta_main.c  timer.c  tunnel_main.c  tunnel_main.cpp  uart2_io.c  uart2_io.h  utimer.h  version.h  wifi.h  wifi_comm.c  wifi_comm.h  wifi_main.c  www_main.c
includes/: cfg_parse.h  cmd_rf433.h  rf433.h  spifs.h
linux/: Makefile  a.c  decode.c  decode.h  esp32-wifi.service  main_decode.c  main_tst_decode.c  serio.c  test.sh  tun1.c  tun2.c  watchdog.sh
linux/esp32/: esp32_reset.sh  setup_pins.sh
linux/spi/: Makefile  checksum.c  checksum.h  gpio_int.c  spi.h  spi_test.c  spidev_fdx.c  spidev_test.c  test1.c  xdata-1.c
rf433/: .gitignore  CMakeLists.txt  Makefile  sdkconfig  sdkconfig.defaults
rf433/main/: CMakeLists.txt  Kconfig.projbuild  btn.h  checksum.c  console_main.c  rf433_main.c  rf433_task.c  serio.h  spio.cpp  uart2_io.c  version.h  wifi_main.c
rf433/scripts/: Readme.MD  parse_capture.pl  transform.pl  unpack_p2.pl
(+12 files in other folders)
